--- a/escom-bpm-web/src/main/webapp/view/index.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/index.xhtml
@@ -147,7 +147,7 @@
                                 <p:link href="#{sessionBean.onGetFormURL('/services/mail/'.concat('reader-service'))}" value="#{bundle.ServiceReaderEmail}" target="_blank" />
 
                                 <p:graphicImage value="/resources/icon/service-32.png"/>                                
-                                <p:link href="#{sessionBean.onGetFormURL('/services/notification/'.concat('ldap'))}" value="#{bundle.LdapService}" target="_blank" />
+                                <p:link href="#{sessionBean.onGetFormURL('/services/ldap/'.concat('ldap'))}" value="#{bundle.LdapService}" target="_blank" />
                                 
                                 <p:graphicImage value="/resources/icon/service-32.png"/>
                                 <p:link href="#{sessionBean.onGetFormURL('/services/notification/'.concat('notification'))}" value="#{bundle.ServiceNotification}" target="_blank" />
