--- a/escom-bpm-web/src/main/webapp/view/templ/templ.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ.xhtml
@@ -27,6 +27,10 @@
 
     <h:body> 
 
+        <f:facet name="first">
+            <meta http-equiv = "X-UA-Compatible" content = "IE = edge" />
+        </f:facet>
+        
         <ui:insert name="customStyleCSS"/>
         <ui:insert name="systems"/>
         <ui:insert name="body" /> 
