--- a/escom-bpm-web/src/main/webapp/view/templ/templ-dlg.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ-dlg.xhtml
@@ -44,7 +44,7 @@
                         </f:facet>
                         <f:facet name="right">
                             <ui:insert name="specToolButtons"/>
-                            <p:menuButton value="#{bundle.Actions}" icon="ui-icon-gear">
+                            <p:menuButton value="#{bundle.Actions}" icon="ico_service-16">
                                 <ui:insert name="menuActions" />  
                                 <p:separator />
                                 <p:menuitem value="#{bundle.ManualBook}" icon="ui-icon-help" rendered="#{_isShowHelp}" 
