--- a/escom-bpm-web/src/main/webapp/view/templ/templ.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ.xhtml
@@ -17,7 +17,10 @@
         </title> 
 
         <link rel="shortcut icon" href="#{resource['icon/done.png']}" type="image/png"/>
+        
         <h:outputStylesheet library="css" name="em_style1.css"/>
+        <h:outputStylesheet library="css" name="icons.css"/>
+        
         <f:view locale="#{sessionBean.locale}"></f:view>
         <h:outputScript library="js" name="detect-browser.js" /> 
         <h:outputScript library="js" name="detect-os.js" /> 
