--- a/escom-bpm-web/src/main/webapp/view/docs/doc-viewer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/doc-viewer.xhtml
@@ -26,13 +26,13 @@
         <pe:layout fullPage="true" style="font-size: 80%;" stateCookie="true">            
 
             <pe:layoutPane id="east" position="east" rendered="#{attacheBean.isRemarkTabShow()}" resizable="true" size="30%">
-                <h:form id="eastFRM" style="font-size: 90%;  height: 100%;" onkeypress="checkEsc();">
+                <h:form id="eastFRM" style="font-size: 90%;  height: 100%;">
                     <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12 col-padding" styleClass="without-spaces ui-grid-col-12" style="height: 100%;">
                         <p:messages id="messages" showDetail="false" closable="true" styleClass="ui-grid-col-12 without-spaces">
                             <p:autoUpdate />
                         </p:messages>
                         <ui:include src="/view/docs/remarks/remarks-panel.xhtml"/>
-                    </p:panelGrid>
+                    </p:panelGrid>            
                     <ui:include src="/view/common/confirm-dlg.xhtml"/>
                 </h:form>
             </pe:layoutPane>
@@ -52,12 +52,10 @@
                                                    }">
                                 <h:outputText styleClass="ui-icon ui-icon-closethick" />
                             </p:commandLink>
-                        </f:facet>                    
-
-                        <p:panelGrid columns="1" rendered="#{attacheBean.content != null}" columnClasses="ui-grid-col-12 col-padding" styleClass="without-spaces ui-grid-col-12" style="height: 100%;">
-                            <pe:documentViewer value="#{attacheBean.content}" height="800" style="width: 100%;" />                        
-                        </p:panelGrid>
-
+                        </f:facet>
+                        
+                        <pe:documentViewer value="#{attacheBean.content}" rendered="#{attacheBean.content != null}" height="800"  />
+                        
                         <p:panelGrid columns="1" layout="grid" rendered="#{attacheBean.content == null}" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12">                        
                             <p:panel styleClass="ui-grid-col-12" style="height: 100%;">
                                 <p:panelGrid columns="2" layout="grid" columnClasses="ui-grid-col-3, ui-grid-col-9" styleClass="ui-grid-col-12">
@@ -70,7 +68,7 @@
                                 </p:panelGrid>            
                             </p:panel>
                         </p:panelGrid>
-                    </p:panel>
+                    </p:panel>                                        
                     <p:remoteCommand name="formSize" immediate="true" actionListener="#{sessionBean.onFormSize()}" />
                 </h:form>
             </pe:layoutPane>
