--- a/escom-bpm-web/src/main/webapp/view/notify/notify-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/notify/notify-card.xhtml
@@ -7,7 +7,7 @@
     <ui:param name="_bean" value="#{notifyCardBean}"/>    
 
     <ui:define name="specToolButtons" >
-        <p:commandButton icon="ui-icon-mail-closed" value="#{bundle.Send}" title="#{bundle.Send}" update="mainFRM"
+        <p:commandButton icon="ico_message-16" value="#{bundle.Send}" title="#{bundle.Send}" update="mainFRM"
                          actionListener="#{notifyCardBean.onSend()}">
            <f:param name="isRequired" value="true"/>
        </p:commandButton>
@@ -25,7 +25,7 @@
                                 required="#{param['isRequired'] == 'true'}" 
                                 requiredMessage="#{bundle.Field} [#{bundle.Message}] #{bundle.MustBeFilled}">
                     </p:inputText>
-                    <p:outputLabel value="#{bundle.Remark}:" indicateRequired="true"/>
+                    <p:outputLabel value="#{bundle.Content}:" indicateRequired="true"/>
                     <p:inputTextarea value="#{_bean.content}" styleClass="ui-grid-col-12"
                                      rows="3" autoResize="true"
                                      required="#{param['isRequired'] == 'true'}" 
@@ -42,7 +42,15 @@
                         <f:facet name="targetCaption">#{bundle.Recipients}</f:facet>
                     </p:pickList>
 
-                </p:panelGrid>
+                    <p:contextMenu for="pickList">
+                        <p:menuitem value="#{bundle.AddRecipient}" 
+                                    onclick="document.getElementById('mainFRM:mainTabView:btnSelectRecipient').click();">
+                        </p:menuitem>
+                    </p:contextMenu>
+                    <p:commandButton id="btnSelectRecipient" style="display: none;" actionListener="#{userBean.onManySelectItem()}">
+                        <p:ajax event="dialogReturn" listener="#{notifyCardBean.onAddRecipients}" update="mainFRM:mainTabView:pickList"/>
+                    </p:commandButton>
+                </p:panelGrid>                
             </p:tab>
                         
         </p:tabView>
