--- a/escom-bpm-web/src/main/webapp/resources/css/icons.css
+++ b/escom-bpm-web/src/main/webapp/resources/css/icons.css
@@ -6,30 +6,22 @@
 .ico_rotate {background-image: url('../resources/icon/rotate.png') !important;}
 .ico_rotateLeft{background-image: url('../resources/icon/rotateLeft.png') !important;}
 .ico_rotateRight{background-image: url('../resources/icon/rotateRight.png') !important;}
-.ico_doc16 {background-image: url('../resources/icon/doc16.png') !important;}
 .ico_doc32 {background-image: url('../resources/icon/doc-32.png') !important;}
 .ico_add {background-image: url('../resources/icon/add.png') !important;}
 .ico_back {background-image: url('../resources/icon/back.png') !important;}
 .ico_run {background-image: url('../resources/icon/run.png') !important;}
 .ico_refresh {background-image: url('../resources/icon/refresh.png') !important;}
 .ico_execute {background-image: url('../resources/icon/execute.png') !important;}
-.ico_enter20 {background-image: url('../resources/icon/enter-20.png') !important;}
-
 .ico_exit{background-image: url('../resources/icon/door-open20.png') !important;}
-.ico_exit20 {background-image: url('../resources/icon/exit-20.png') !important;}
-
 .ico_sign {background-image: url('../resources/icon/sign.png') !important;}
-.ico_16_inspector{background-image: url('../resources/icon/inspector.png') !important;}
 .ico_outdoc{background-image: url('../resources/icon/outdoc.png') !important;}
 .ico_look{background-image: url('../resources/icon/look.png') !important;}
 .ico_importante{background-image: url('../resources/icon/importante.png') !important;}
-
 .ico_done {background-image: url('../resources/icon/done.png') !important;}
 .ico_flag_green{background-image: url('../resources/icon/flag_green.png') !important;}
 .ico_flag_red{background-image: url('../resources/icon/flag_red.png') !important;}
 .ico_flag_yelow{background-image: url('../resources/icon/flag_yelow.png') !important;}
 .ico_cancel{background-image: url('../resources/icon/cancel.png') !important; }
-
 .ico_paste{background-image: url('../resources/icon/paste.png')!important;}
 .icon_clear{background-image: url('../resources/icon/clear.png')!important;}
 .ico_close{background-image: url('../resources/icon/close.png') !important;}
@@ -51,14 +43,28 @@
 .ico_process{background-image: url('../resources/icon/process.png') !important;}
 .ico_task{background-image: url('../resources/icon/newtask.png') !important;}
 
-.ico_message-20{background-image: url('../resources/icon/msg-20.png') !important;}
-.ico_printer-20{background-image: url('../resources/icon/printer-20.png') !important;}
-.ico_service-20{background-image: url('../resources/icon/service-20.png') !important;}
-.ico_save-20{background-image: url('../resources/icon/save-20.png') !important;}
-
+.ico_16_inspector{background-image: url('../resources/icon/inspector.png') !important;}
+.ico_doc16 {background-image: url('../resources/icon/doc16.png') !important;}
+.ico_exit16 {background-image: url('../resources/icon/exit-16.png') !important;}
+.ico_enter16 {background-image: url('../resources/icon/enter-16.png') !important;}
 .ico_message-16{background-image: url('../resources/icon/msg-16.png') !important;}
 .ico_printer-16{background-image: url('../resources/icon/printer-16.png') !important;}
 .ico_service-16{background-image: url('../resources/icon/service-16.png') !important;}
 .ico_save-16{background-image: url('../resources/icon/save-16.png') !important;}
 .ico-play-16{background-image: url('../resources/icon/play-16.png') !important;}
 .ico-stop-16{background-image: url('../resources/icon/stop-16.png') !important;}
+.ico-task-16{background-image: url('../resources/icon/task-16.png') !important;}
+.ico_timer16{background-image: url('../resources/icon/timer-16.png') !important;}
+.ico_condition-16{background-image: url('../resources/icon/condition-16.png') !important;}
+.ico_state-16{background-image: url('../resources/icon/state-16.png') !important;}
+.ico_procedure-16{background-image: url('../resources/icon/procedure-16.png') !important;}
+.ico_start-16{background-image: url('../resources/icon/start-16.png') !important;}
+
+.ico-task-20{background-image: url('../resources/icon/task-20.png') !important;}
+.ico_message-20{background-image: url('../resources/icon/msg-20.png') !important;}
+.ico_printer-20{background-image: url('../resources/icon/printer-20.png') !important;}
+.ico_service-20{background-image: url('../resources/icon/service-20.png') !important;}
+.ico_save-20{background-image: url('../resources/icon/save-20.png') !important;}
+.ico_exit20 {background-image: url('../resources/icon/exit-20.png') !important;}
+.ico_enter20 {background-image: url('../resources/icon/enter-20.png') !important;}
+.ico_timer20 {background-image: url('../resources/icon/timer-20.png') !important;}
