--- a/escom-bpm-web/src/main/webapp/resources/css/processes.css
+++ b/escom-bpm-web/src/main/webapp/resources/css/processes.css
@@ -1,4 +1,3 @@
-
 .ui-diagram-task {
     background-color: #9ed4ef;
     width: 10em;
@@ -75,6 +74,13 @@
     width:10em;
     height:4em;
     background-color: cadetblue;
+}
+
+.ui-diagram-subprocess {
+    width:10em;
+    height:5em;
+    border-radius: 16px !important;
+    background-color: wheat;    
 }
 
 .ui-diagram-enter {
